--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,11 @@
 <resources>
     <string name = "app_name">TMDB Unofficial</string>
+    <string name = "splash">Splash</string>
+    <string name = "home">Home</string>
+    <string name = "bookmark">Bookmark</string>
+    <string name = "search">Search</string>
+    <string name = "top">Top</string>
+    <string name = "setting">Setting</string>
+    <string name = "movie_details">Movie Details</string>
+    <string name = "series_details">Series Details</string>
 </resources>
