--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,11 @@
     <string name = "setting">Setting</string>
     <string name = "movie_details">Movie Details</string>
     <string name = "series_details">Series Details</string>
+    <string name = "today">Today</string>
+    <string name = "this_week">This Week</string>
+
+    <string-array name = "date_range">
+        <item>@string/today</item>
+        <item>@string/this_week</item>
+    </string-array>
 </resources>
