separate screen created for episode details

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,7 @@
     <string name = "this_week">This Week</string>
     <string name = "Movie">Movie</string>
     <string name = "Series">Series</string>
+    <string name = "episode_list">Episode List</string>
 
     <string-array name = "date_range_options">
         <item>@string/today</item>
