--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,6 +46,7 @@
     <string name = "movies_as_crew">Movies as Crew</string>
     <string name = "tvs_as_crew">Tvs as Crew</string>
     <string name = "seasons">Seasons</string>
+    <string name = "episodes">Episodes</string>
 
     <string-array name = "date_range_options">
         <item>@string/today</item>
