--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,6 +47,21 @@
     <string name = "tvs_as_crew">Tvs as Crew</string>
     <string name = "seasons">Seasons</string>
     <string name = "episodes">Episodes</string>
+    <string name = "_10">/10</string>
+    <string name = "details_divider">" | "</string>
+    <string name = "hour">" h "</string>
+    <string name = "minute">" min"</string>
+    <string name = "total_seasons">%1$s Seasons</string>
+    <string name = "season_number">"Season "</string>
+    <string name = "episode_number">" Episode "</string>
+    <string name = "type">Type</string>
+    <string name = "popular_of_genre">Popular %1$s %2$s</string>
+    <string name = "movies">Movies</string>
+    <string name = "tvs">Tvs</string>
+    <string name = "message_no_result">unfortunately, your search has no result</string>
+    <string name = "use_dynamic_color">Use Dynamic Color</string>
+    <string name = "dark_mode_preference">Dark Mode Preference</string>
+
 
     <string-array name = "date_range_options">
         <item>@string/today</item>
