--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name = "app_name">TMDB Unofficial</string>
+    <string name = "app_name">Cine Box</string>
     <string name = "splash">Splash</string>
     <string name = "home">Home</string>
     <string name = "bookmark">Bookmark</string>
